continued working on the localization change and implemented settings saving

--- a/resources/localisation/german.yml
+++ b/resources/localisation/german.yml
@@ -9,8 +9,8 @@ Deutsch:
     info:
       close: "Schliessen"
     two_option:
-      confirm_delete: "Loeschen bestaetigen"
-      confirm_delete_question: "Sind Sie sicher, dass Sie diese Lernkartei loeschen moechten?"
+      confirm_delete: "Löschen bestaetigen"
+      confirm_delete_question: "Sind Sie sicher, dass Sie diese Lernkartei löschen moechten?"
       yes: "Ja"
       no: "Nein"
     new_set:
@@ -18,28 +18,28 @@ Deutsch:
       enter_set_name: "Lernkarteiname eingeben:"
       description_1: "Beschreibung 1"
       description_2: "Beschreibung 2"
-      confirm: "Bestaetigen"
+      confirm: "Bestätigen"
       cancel: "Abbrechen"
     input:
       rename_title: "Satz umbenennen"
-      rename_description: "Geben Sie einen neuen Namen fuer den Satz ein:"
-      confirm: "Bestaetigen"
+      rename_description: "Geben Sie einen neuen Namen für den Satz ein:"
+      confirm: "Bestätigen"
       cancel: "Abbrechen"
     errors:
       error: "Fehler"
-      select_set: "Bitte waehlen oder erstellen Sie einen Lernkartei"
-      select_box: "Bitte waehlen oder erstellen Sie eine Fach"
-      no_cards_in_box: "Die von Ihnen zu startende Fach enthaelt keine Karten. Fuegen Sie einige Karten hinzu oder waehlen Sie eine andere Fach"
-      too_many_cards: "Sie versuchen mit {requested_cards} Karten zu starten, waehrend sich nur {available_cards} Karten in dem Fach befinden"
-      set_dropped: "Es scheint, als waeren die Datenbanktabellen geloescht worden"
-      box_creation_fail: "Beim Hinzufuegen des Fachs ist ein Fehler aufgetreten"
-      card_creation_fail: "Beim Hinzufuegen der Karte ist ein Fehler aufgetreten"
+      select_set: "Bitte wählen oder erstellen Sie einen Lernkartei"
+      select_box: "Bitte wählen oder erstellen Sie eine Fach"
+      no_cards_in_box: "Die von Ihnen zu startende Fach enthält keine Karten. Fügen Sie einige Karten hinzu oder wählen Sie eine andere Fach"
+      too_many_cards: "Sie versuchen mit {requested_cards} Karten zu starten, während sich nur {available_cards} Karten in dem Fach befinden"
+      set_dropped: "Es scheint, als wären die Datenbanktabellen gelöscht worden"
+      box_creation_fail: "Beim Hinzufügen des Fachs ist ein Fehler aufgetreten"
+      card_creation_fail: "Beim Hinzufügen der Karte ist ein Fehler aufgetreten"
       dupilcate_card: "Eine Karte mit demselben Inhalt existiert bereits in diesem Lernkartei"
   settings:
     language: "Sprache"
     theme: "Thema"
     simplified_view: "Vereinfachte Ansicht"
-    allow_premium: "Kauf von Premium erlauben"
+    allow_premium: "Premium"
     suggest_feature: "Neues Feature vorschlagen"
   menu:
     home: "Startseite"
@@ -59,39 +59,39 @@ Deutsch:
     exit: "Stop"
   start:
     box: "Fach"
-    box_all: "Alle Faecher"
-    box_due: "Faellige Faecher"
+    box_all: "Alle Fächer"
+    box_due: "Fällige Fächer"
     time_per_card: "Zeit pro Karte"
     total_time: "Gesamtzeit"
-    case_sensitive: "GroÃŸ-/Kleinschreibung beachten"
+    case_sensitive: "Groß-/Kleinschreibung"
     amount_of_cards: "Anzahl der Karten"
-    practise_run: "Uebungsdurchlauf"
+    practise_run: "Übungsdurchlauf"
   buttons:
     start: "Start"
     new_set: "Neuer Satz"
     import: "Importieren"
     export: "Exportieren"
     rename: "Umbenennen"
-    delete: "Loeschen"
+    delete: "Löschen"
     save: "Speichern"
-    stop: "Stoppen"
-    skip: "Ueberspringen"
+    stop: "Stop"
+    skip: "Überspringen"
     next: "Weiter"
-    check: "Ueberpruefen"
-    close: "SchlieÃŸen"
+    check: "Überprüfen"
+    close: "Schließen"
     end: "Beenden"
   labels:
     language: "Sprache"
     theme: "Thema"
     simplified_view: "Vereinfachte Ansicht"
-    allow_premium: "Kauf von Premium erlauben"
+    allow_premium: "Premium"
   statistics:
     total_time: "Gesamtzeit"
     max_card_time: "Maximale Kartenzeit"
     min_card_time: "Minimale Kartenzeit"
     avg_card_time: "Durchschnittliche Kartenzeit"
     total_cards: "Gesamtkarten"
-    skipped_cards: "Uebersprungene Karten"
+    skipped_cards: "Übersprungene Karten"
     wrong_answers: "Falsche Antworten"
     correct_answers: "Korrekte Antworten"
     max_streak: "Maximale Serie"
