--- a/resources/localisation/english.yml
+++ b/resources/localisation/english.yml
@@ -1,46 +1,54 @@
 English:
-  title: 
-    title: "Vocable Trainer"
-  time:
+  main:
+    title: "VocableTrainer"
+  data:
     seconds: "Seconds"
     minutes: "Minutes"
     hours: "Hours"
-  dialogs:
+  export:
+    export: "Export Cards with Box"
+    question: "Do you also want to export the Boxes"
+  dialog:
     info:
       close: "Close"
-    two_option:
-      confirm_delete: "Confirm Delete"
-      confirm_delete_question: "Are you sure you want to delete this set?"
+    two_options:
       yes: "Yes"
       no: "No"
+      delete:
+        title: "Delete Set Confirmation"
+        question: "Are you sure you want to delete this Set?"
+        confirm: "Delete"
+        cancel: "Cancel"
     new_set:
-      title: "New Set"
-      enter_set_name: "Enter set name:"
-      description_1: "Description 1"
-      description_2: "Description 2"
-      confirm: "Confirm"
+      title: "Create new Set"
+      enter_set_name: "Enter the name of the new Set"
+      description1: "Description 1"
+      description2: "Description 2"
+      save: "Save"
       cancel: "Cancel"
     input:
-      rename_title: "Rename Set"
-      rename_description: "Enter new name for the set:"
+      rename: "Rename Set"
+      question: "Enter a new name for the Set"
       confirm: "Confirm"
       cancel: "Cancel"
-    errors:
-      error: "Error"
-      select_set: "Please select or create a Set"
-      select_box: "Please select or create a Box"
-      no_cards_in_box: "The Box you are trying to start has 0 Cards in it. Either add some Cards or choose another Box"
-      too_many_cards: "You are trying to start with {requested_cards} cards while there are only {available_cards} Cards in the Box"
-      set_dropped: "Looks like the Sets Database was dropped"
-      box_creation_fail: "An error occurred while adding the box"
-      card_creation_fail: "An error occurred while adding the card"
-      dupilcate_card: "A card with the same content already exists in this set"
-  settings:
-    language: "Language"
-    theme: "Theme"
-    simplified_view: "Simplified View"
-    allow_premium: "Allow purchase of Premium"
-    suggest_feature: "Suggest new Feature"
+  error:
+    error: "Error"
+    database_dropped: "The tables in the database where deleted"
+    start:
+      select_set: "Select a Set to continue"
+      select_box: "Select a Box to continue"
+      no_cards_in_box: "There are currently no Cards in the current Box!\nAdd some or change to a box that has some"
+      too_many_cards: "You have selected { Cards set in the Start settings } Cards in the Start settings but you only have { Amount of Cards in the Box } Cards in your Box"
+    new:
+      enter_data: "\"{ Textfield 1}\" and \"{ Textfield 2}\" have to contain Data"
+      set_creation_fail: "Failed to create a new Set"
+      box_creation_fail: "Failed to create a new Box"
+      card_creation_fail: "Failed to create a new Card"
+    import:
+      duplicate_card: "There already exists a card with the same name in the Lernkartei"
+    settings:
+      no_internet: "Failed to connect to the Website"
+      not_supported: "It seems your OS isn't comatible with this button. Website: "
   menu:
     home: "Home"
     start: "Start"
@@ -48,53 +56,50 @@ English:
     new: "New"
     credits: "Credits"
     settings: "Settings"
-    exit: "Exit"
-  credits:
-    creators: "Creators:"
-    helpers: "Special thanks to our slaves:"
+    help: "Help"
   home:
+    name: "Home"
     start: "Start"
     new: "New"
     info: "Info"
     exit: "Exit"
-  start:
-    box: "Box"
-    box_all: "All Boxes"
-    box_due: "Due Boxes"
-    time_per_card: "Time per Card"
-    total_time: "Total Time"
-    case_sensitive: "Case sensitive"
-    amount_of_cards: "Amount of cards"
-    practise_run: "Practice Run"
-  buttons:
-    start: "Start"
+  new: 
+    name: "New"
     new_set: "New Set"
     import: "Import"
     export: "Export"
+    save: "Save"
     rename: "Rename"
     delete: "Delete"
+  info: 
+    name: "Info"
+    topic: "Set: "
+    rename: "Rename"
     save: "Save"
-    stop: "Stop"
-    skip: "Skip"
-    next: "Next"
-    check: "Check"
-    close: "Close"
-    end: "End"
-  labels:
+    delete: "Delete"
+    date_modified: "Date modified"
+    last_asked: "Last asked"
+    box: "Box"
+  start:
+    name: "Start"
+    box:
+      box: "Box"
+      all: "All Boxes"
+      due: "Due Boxes"
+    time_per_card: "Time per Card"
+    total_time: "Total time"
+    case_sensitive: "Case sensitive"
+    amount_of_cards: "Amount of Cards"
+    practise_run: "Practise run"
+    start: "Start"
+  credits:
+    name: "Credits"
+    creators: "Creators:"
+    helpers: "Special thanks to our slaves for ideas:"
+  settings:
+    name: "Name"
     language: "Language"
     theme: "Theme"
-    simplified_view: "Simplified View"
-    allow_premium: "Allow purchase of Premium"
-  statistics:
-    total_time: "Total Time"
-    max_card_time: "Max Card Time"
-    min_card_time: "Min Card Time"
-    avg_card_time: "Avg Card Time"
-    total_cards: "Total Cards"
-    skipped_cards: "Skipped Cards"
-    wrong_answers: "Wrong Answers"
-    correct_answers: "Correct Answers"
-    max_streak: "Max Streak"
-    accuracy: "Accuracy"
-  placeholders:
-    input_word: "Enter the correct equivalent word"
+    simplified_view: "Simplified view"
+    allow_premium: "Allow premium"
+    suggest_feature: "Suggest feature"
