--- a/src/net/tfobz/vocabletrainer/main/resources/localisation/English.yml
+++ b/src/net/tfobz/vocabletrainer/main/resources/localisation/English.yml
@@ -120,8 +120,8 @@ English:
       min_card_time: "Min Card Time: "
       avg_card_time: "Avg Card Time: "
       total_cards: "Total Cards: "
-      skipped_cards: "Skipped Cards: "
-      wrong_ansers: "Wrong Answers: "
-      correct_answers: "Correct Answers: "
-      max_streak: "Max Streak: "
-      accuracy: "Accuracy: "
+      skipped_cards:
+      wrong_ansers:
+      correct_answers:
+      max_streak:
+      accuracy:
