--- a/src/net/tfobz/vocabletrainer/main/resources/localisation/English.yml
+++ b/src/net/tfobz/vocabletrainer/main/resources/localisation/English.yml
@@ -115,13 +115,13 @@ English:
     end: "End"
     answer: "Your answer"
     stats:
-      total_time: "Total Time: "
-      max_card_time: "Max Card Time: "
-      min_card_time: "Min Card Time: "
-      avg_card_time: "Avg Card Time: "
-      total_cards: "Total Cards: "
-      skipped_cards:
-      wrong_ansers:
-      correct_answers:
-      max_streak:
-      accuracy:
+      total_time: "Total Time"
+      max_card_time: "Max Card Time"
+      min_card_time: "Min Card Time"
+      avg_card_time: "Avg Card Time"
+      total_cards: "Total Cards"
+      skipped_cards: "Skipped Cards"
+      wrong_ansers: "Wrong Answers"
+      correct_answers: "Correct Answers"
+      max_streak: "Max Streak"
+      accuracy: "Accuracy"
