--- a/src/net/tfobz/vocabletrainer/main/resources/localisation/English.yml
+++ b/src/net/tfobz/vocabletrainer/main/resources/localisation/English.yml
@@ -31,6 +31,19 @@ English:
       question: "Enter a new name for the Set"
       confirm: "Confirm"
       cancel: "Cancel"
+    chooser:
+      title: "Theme customiser"
+    colour_chooser1:
+      title: "Theme customiser"
+      apply: "Hello World"
+      colour:
+        menu_bar: "Menu Bar Colour"
+        main_background: "Main Background Colour"
+        text_1: "Text Colour 1"
+        text_2: "Text Colour 2"
+        button_background: "Button Background Colour"
+      apply1: "Apply"
+      close: "Close"
   error:
     error: "Error"
     database_dropped: "The tables in the database where deleted"
@@ -115,13 +128,13 @@ English:
     end: "End"
     answer: "Your answer"
     stats:
-      total_time: "Total Time"
-      max_card_time: "Max Card Time"
-      min_card_time: "Min Card Time"
-      avg_card_time: "Avg Card Time"
-      total_cards: "Total Cards"
-      skipped_cards: "Skipped Cards"
-      wrong_ansers: "Wrong Answers"
-      correct_answers: "Correct Answers"
-      max_streak: "Max Streak"
-      accuracy: "Accuracy"
+      total_time: "Total Time: "
+      max_card_time: "Max Card Time: "
+      min_card_time: "Min Card Time: "
+      avg_card_time: "Avg Card Time: "
+      total_cards: "Total Cards: "
+      skipped_cards: "Skipped Cards: "
+      wrong_ansers: "Wrong Answers: "
+      correct_answers: "Correct Answers: "
+      max_streak: "Max Streak: "
+      accuracy: "Accuracy: "
