--- a/src/net/tfobz/vocabletrainer/main/resources/localisation/Italiano.yml
+++ b/src/net/tfobz/vocabletrainer/main/resources/localisation/Italiano.yml
@@ -102,7 +102,7 @@ Italiano:
     theme: "Tema"
     simplified_view: "Vista semplificata"
     allow_premium: "Consenti premium"
-    suggest_feature: "Suggerisci funzionalita'"
+    suggest_feature: "Suggerisci funzionalità"
   run: 
     name: "Allenamento"
     time:
