--- a/src/net/tfobz/vocabletrainer/main/resources/localisation/Deutsch.yml
+++ b/src/net/tfobz/vocabletrainer/main/resources/localisation/Deutsch.yml
@@ -6,49 +6,63 @@ Deutsch:
     minutes: "Minuten"
     hours: "Stunden"
   export:
-    export: "Karten mit Fach exportieren"
-    question: "Möchten Sie auch die Fächer exportieren?"
+    export: "Karten mit Box exportieren"
+    question: "Moechten Sie auch die Boxen exportieren"
   dialog:
     info:
-      close: "Schließen"
+      close: "Schliessen"
     two_options:
       yes: "Ja"
       no: "Nein"
       delete:
-        title: "Löschen bestätigung"
-        question: "Sind Sie sicher, dass Sie diese Lernkartei löschen möchten?"
-        confirm: "Löschen"
+        title: "Bestaetigung zum Loeschen des Sets"
+        question: "Sind Sie sicher, dass Sie dieses Set loeschen moechten?"
+        confirm: "Loeschen"
         cancel: "Abbrechen"
     new_set:
-      title: "Neue Lernkartei erstellen"
-      enter_set_name: "Geben Sie den Namen der neuen Lernkartei ein"
+      title: "Neues Set erstellen"
+      enter_set_name: "Geben Sie den Namen des neuen Sets ein"
       description1: "Beschreibung 1"
       description2: "Beschreibung 2"
       save: "Speichern"
       cancel: "Abbrechen"
     input:
-      rename: "Lernkartei umbenennen"
-      question: "Geben Sie einen neuen Namen für die Lernkartei ein"
-      confirm: "Bestätigen"
+      rename: "Set umbenennen"
+      question: "Geben Sie einen neuen Namen fuer das Set ein"
+      confirm: "Bestaetigen"
       cancel: "Abbrechen"
+    chooser:
+      title: "Aussehenanpasser"
+    colour_chooser:
+      title: "Aussehenanpasser"
+      choose_color: "Farbe waehlen"
+      apply: "Anwenden"
+      colour:
+        menu_bar: "Menueleistenfarbe"
+        main_background: "Hintergrundfarbe"
+        text_1: "Textfarbe 1"
+        text_2: "Textfarbe 2"
+        button_background: "Button-Hintergrundfarbe"
+      apply1: "Anwenden"
+      close: "Schliessen"
   error:
     error: "Fehler"
-    database_dropped: "Die Tabellen in der Datenbank wurden gelöscht"
+    database_dropped: "Die Tabellen in der Datenbank wurden geloescht"
     start:
-      select_set: "Wählen Sie ein Lernkartei aus, um fortzufahren"
-      select_box: "Wählen Sie eine Fach aus, um fortzufahren"
-      no_cards_in_box: "In dem aktuellen FAch sind derzeit keine Karten!\nFügen Sie einige hinzu oder wechseln Sie zu eine, Fach, die welche enthält"
-      too_many_cards: "Sie haben { Cards set in the Start settings } Karten in den Starteinstellungen ausgewählt, aber Sie haben nur { Amount of Cards in the Box } Karten in Ihrem Fach"
+      select_set: "Waehlen Sie ein Set zum Fortfahren"
+      select_box: "Waehlen Sie eine Box zum Fortfahren"
+      no_cards_in_box: "Es befinden sich derzeit keine Karten in der ausgewaehlten Box!\nFuegen Sie welche hinzu oder wechseln Sie zu einer Box mit Karten"
+      too_many_cards: "Sie haben { Cards set in the Start settings } Karten in den Start-Einstellungen gesetzt, aber nur { Amount of Cards in the Box } Karten in Ihrer Box"
     new:
-      enter_data: "\"{ Textfield 1 }\" und \"{ Textfield 2 }\" müssen Daten enthalten"
-      set_creation_fail: "Erstellung einer neuen Lernkartei fehlgeschlagen"
-      box_creation_fail: "Erstellung eines neuen Fachs fehlgeschlagen"
-      card_creation_fail: "Erstellung einer neuen Karte fehlgeschlagen"
+      enter_data: "\"{ Textfeld 1}\" und \"{ Textfeld 2}\" muessen Daten enthalten"
+      set_creation_fail: "Fehler beim Erstellen eines neuen Sets"
+      box_creation_fail: "Fehler beim Erstellen einer neuen Box"
+      card_creation_fail: "Fehler beim Erstellen einer neuen Karte"
     import:
       duplicate_card: "Es existiert bereits eine Karte mit demselben Namen in der Lernkartei"
     settings:
-      no_internet: "Verbindung zur Webseite fehlgeschlagen"
-      not_supported: "Es scheint, dass Ihr Betriebssystem mit diesem Knopf nicht kompatibel ist. Webseite: "
+      no_internet: "Fehler beim Verbinden mit der Website"
+      not_supported: "Es scheint, dass Ihr Betriebssystem mit diesem Button nicht kompatibel ist. Website: "
   menu:
     home: "Startseite"
     start: "Start"
@@ -62,44 +76,66 @@ Deutsch:
     start: "Start"
     new: "Neu"
     info: "Info"
-    exit: "Stop"
+    exit: "Beenden"
   new: 
     name: "Neu"
-    new_set: "Neue Lernkartei"
+    new_set: "Neues Set"
     import: "Importieren"
     export: "Exportieren"
     save: "Speichern"
     rename: "Umbenennen"
-    delete: "Löschen"
+    delete: "Loeschen"
   info: 
     name: "Info"
-    topic: "Lernkartei: "
+    topic: "Set: "
     rename: "Umbenennen"
     save: "Speichern"
-    delete: "Löschen"
-    date_modified: "Änderungsdatum"
-    last_asked: "Zuletzt gefragt"
-    box: "Fach"
+    delete: "Loeschen"
+    date_modified: "Aenderungsdatum"
+    last_asked: "Zuletzt abgefragt"
+    box: "Box"
   start:
     name: "Start"
     box:
-      box: "Fach"
-      all: "Alle Fächer"
-      due: "Fällige Fächer"
+      box: "Box"
+      all: "Alle Boxen"
+      due: "Faellige Boxen"
     time_per_card: "Zeit pro Karte"
     total_time: "Gesamtzeit"
-    case_sensitive: "Groß-/Kleinschreibung beachten"
+    case_sensitive: "Gross-/Kleinschreibung beachten"
     amount_of_cards: "Anzahl der Karten"
-    practise_run: "Übungsdurchlauf"
-    start: "Starten"
+    practise_run: "Uebungslauf"
+    start: "Start"
   credits:
     name: "Credits"
     creators: "Ersteller:"
-    helpers: "Besonderer Dank an unsere Sklaven für Ideen:"
+    helpers: "Besonderer Dank an unsere Ideen-Sklaven:"
   settings:
     name: "Einstellungen"
     language: "Sprache"
-    theme: "Thema"
+    theme: "Aussehen"
     simplified_view: "Vereinfachte Ansicht"
     allow_premium: "Premium erlauben"
     suggest_feature: "Funktion vorschlagen"
+  run: 
+    name: "Ausfuehren"
+    time:
+      total_time: "Gesamtzeit: "
+      time_per_card: "Kartenzeit:  "
+    stop: "Stop"
+    skip: "Ueberspringen"
+    check: "Pruefen"
+    next: "Weiter"
+    end: "Beenden"
+    answer: "Ihre Antwort"
+    stats:
+      total_time: "Gesamtzeit"
+      max_card_time: "Maximale Kartenzeit"
+      min_card_time: "Minimale Kartenzeit"
+      avg_card_time: "Durchschnittliche Kartenzeit"
+      total_cards: "Gesamtkarten"
+      skipped_cards: "Uebersprungene Karten"
+      wrong_ansers: "Falsche Antworten"
+      correct_answers: "Richtige Antworten"
+      max_streak: "Maximale Serie"
+      accuracy: "Genauigkeit"
